--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "A simple product inventory system using Node.js and QuickSort algorithm.",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/index.js"
+    "start": "node backend/index.js",
+    "test": "jest"
   },
-
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "glob": "^9.3.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
